@@ -2,7 +2,6 @@
 ot-recorder
 ocat
 ghashfind
-ghash2lmdb
 *.dSYM
 .DS_Store
 store/
