@@ -145,7 +145,7 @@ void usage(char *prog)
 	printf("  --norevgeo		-G      disable ghash to reverge-geo lookups\n");
 	printf("  --precision		        ghash precision (dflt: %d)\n", GHASHPREC);
 	printf("  --version		-v	print version information\n");
-	printf("  --dump-ghash		  	dump content of ghash cache\n");
+	printf("  --dump-ghash / --load-ghash	dump/load content of ghash cache\n");
 	printf("\n");
 	printf("Options override these environment variables:\n");
 	printf("   $OCAT_USERNAME\n");
@@ -182,7 +182,7 @@ int main(int argc, char **argv)
 {
 	char *progname = *argv, *p;
 	int c;
-	int list = 0, killdata = 0, last = 0, limit = 0, dumpghash = FALSE;
+	int list = 0, killdata = 0, last = 0, limit = 0, dumpghash = FALSE, loadghash = FALSE;
 	int revgeo = TRUE;
 	char *username = NULL, *device = NULL, *time_from = NULL, *time_to = NULL;
 	JsonNode *json, *obj, *locs;
@@ -230,6 +230,7 @@ int main(int argc, char **argv)
 			{ "fields",	required_argument, 0, 	1},
 			{ "precision",	required_argument, 0, 	2},
 			{ "dump-ghash",	no_argument, 0, 	3},
+			{ "load-ghash",	no_argument, 0, 	4},
 			{ "killdata",	no_argument, 0, 	'K'},
 			{ "norevgeo",	no_argument, 0, 	'G'},
 		  	{0, 0, 0, 0}
@@ -250,6 +251,9 @@ int main(int argc, char **argv)
 				break;
 			case 3:
 				dumpghash = TRUE;
+				break;
+			case 4:
+				loadghash = TRUE;
 				break;
 			case 'v':
 				print_versioninfo();
@@ -317,6 +321,11 @@ int main(int argc, char **argv)
 
 	argc -= (optind);
 	argv += (optind);
+
+	if (loadghash) {
+		storage_gcache_load();
+		exit(0);
+	}
 
 	storage_init(revgeo);
 
